--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "typed.js": "^2.0.11"
-  }
+  },
+  "scripts": {
+    "start": "node application.js"
+}
 }
